2002-11-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/plparse.m: Stefan Urbaneks patch to return 1 on failure.
	* Tools/sfparse.m: Similar code for this tool.
	* Source/Additions/GSObjCRuntime.m: Tidied function names
	* Headers/gnustep/base/GSObjCRuntime.h: ditto.
	* Source/NSKeyValueCoding.m: Use new function names.

2002-11-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Fix so we document static declarations made in
	headers and only ignore them in implementation.
	* Tools/AGSOutput.m: Bugfix to output ivar type information.
	* Tools/AGSHtml.m: Reduce space around examples.
	Bugs reported by Chris B. Vetter
	* Source/Additions/GSObjCRuntime.m: Tidied function name conventions.
	* Headers/gnustep/base/GSObjCRuntime.h: ditto.
	* Source/NSKeyValueCoding.m: Use new function names.
	* Source/mframe.m: When scanning arguments, skip type information
	for things poionted to by a pointer - more efficient than scanning
	the fine structure and then throwing away the scanned information.
	* Source/additions/GSMime.m: Fill in 'type' field in multipart/related
	and fix bug in seaarch by content id.  Also minor consistency change
	to API.

2002-11-27  Manuel Guesdon <mguesdon@orange-concept.com>

	* Source/Additions/GSObjCRuntime.m: fixed type call typo 
	in GSFindInstanceVariable
	
2002-11-27  Adam Fedor  <fedor@gnu.org>

	* configure.ac (INCLUDE_FLAGS): New for holding flags needed for
	compiling base.
	* config.make.in (CONFIG_SYSTEM_INCL): Use it.
	* base.make (CONFIG_SYSTEM_INCL): Remove CPPFLAGS
	(CONFIG_SYSTEM_DEFS): Remove.
	* Source/Additions/GNUmakefile: include config.mak

2002-11-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m: New file with GNUstep extensions
	from NSObjCRuntime, plus renamed behavior functions, plus a few other
	runtime manipulation functions. EXPERIMENTAL
	* Headers/gnustep/base/GSObjCRuntime.h: declarations for above.
	* Source/GSCompatibility.m: Don't use new format plists when writing