@@ -28,7 +28,9 @@ ifeq ($(FOUNDATION_LIB),gnu)
 # FIXME - macro names
 #
   CONFIG_SYSTEM_INCL += @NX_CONST_STRING_CPPFLAGS@
-  CONFIG_SYSTEM_LIBS += @LIBS@
+  ifeq ($(shared),no)
+    CONFIG_SYSTEM_LIBS += @LIBS@
+  endif
 
   GNUSTEP_BASE_VERSION = @VERSION@
   GNUSTEP_BASE_MAJOR_VERSION = @MAJOR_VERSION@
