@@ -13,3 +13,7 @@ WITH_FFI=@WITH_FFI@
 HAVE_PTHREAD_H=@HAVE_PTHREAD_H@
 
 CONFIG_SYSTEM_INCL += @INCLUDE_FLAGS@
+ifeq ($(shared),yes)
+  CONFIG_SYSTEM_LIBS += @LIBS@
+endif
+
